--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,13 @@ services:
       - "5003:5003"
     environment:
       - DATABASE_URL=${DATABASE_URL}
+    networks:
+    - traefik
     depends_on:
-      mysql:
+      channel-mysql:
         condition: service_healthy
 
-  mysql:
+  channel-mysql:
     image: mysql:8
     restart: always
     environment:
@@ -28,6 +30,10 @@ services:
       interval: 5s
       timeout: 10s
       retries: 10
+
+networks:
+  traefik:
+    external: false
 
 volumes:
   mysql-data:
